bk_ida/gccida/g0/df_bb_rd_local_compute
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2106:4: error: expected ';' after expression
rtx insn; // [rsp+48h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2106:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+48h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2108:17: error: expected identifier or '('
 struct bb_info = &df_0->bbs[bb->index]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2109:7: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2109:32: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2109:24: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2109:63: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2109:70: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2111:27: error: use of undeclared identifier 'insn'
if ( rtx_class[*( _WORD *)insn] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/df.c:2113:30: error: use of undeclared identifier 'insn'
for ( def_link = df_0->insns[insn->fld[0].rtuint].defs; def_link; def_link = def_link->next ) 
                             ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_rd_local_compute/src/obj/df.o] Error 1
